2003-11-22  graydon hoare  <graydon@pobox.com>

	* lua.cc, lua.hh (hook_get_connect_addr): New hook.
	* std_hooks.lua (get_connect_addr): Default uses HTTP_PROXY.
	* network.cc, network.hh: Use new hook.
	* http_tasks.cc: Teach about HTTP/1.1.
	* cert.cc (bogus_cert_p): Fix UI ugly.

2003-11-21  graydon hoare  <graydon@pobox.com>

	* constants.hh (postsz): New constant for suggested post size.
	* database.cc, database.hh (queue*): Change db API slightly.
	* commands.cc (queue): Adjust to changed db API.
	* network.cc (post_queued_blobs_to_network): Switch to doing
	incremental posts.
	* cert.cc (write_rename_edge, read_rename_edge): Put files on 
	separate lines to accomodate future i18n work.
	* work.cc (add_to_attr_map, write_attr_map): Reorder fields to
	accomodate future i18n work.
	* monotone.texi: Document it.
	* configure.ac, NEWS: Mention 0.8 release.

	Release point (v 0.8).
	
2003-11-14  graydon hoare  <graydon@pobox.com>

	* commands.cc (vcheck): Add.
	* cert.cc, cert.hh (cert_manifest_vcheck): Add.
	(check_manifest_vcheck): Add.
	(calculate_vcheck_mac): Add.
	* constants.hh (vchecklen): New constant.
	* mac.hh: Re-add.
	* monotone.texi (Hash Integrity): New section.
	* monotone.1: Document vcheck.

2003-11-14  graydon hoare  <graydon@pobox.com>

	* database.cc, database.hh (reverse_queue): New class.
	(compute_older_version): New functions.
	(get_manifest_delta): Remove.
	* network.cc, network.hh (queue_blob_for_network): Remove.
	* packet.cc, packet.hh (queueing_packet_writer): Change UI,
	write to queue directly, accept optional<reverse_queue>.
	* cert.cc (write_paths_recursive): Rewrite to use constant
	memory.
	* commands.cc (queue, queue_edge_for_target_ancestor):
	Install optional<reverse_queue> in qpw.
	* tests/t_cross.at: Ignore new UI chatter.
	* monotone.texi (Transmitting Changes): Change UI output.

2003-11-13  graydon hoare  <graydon@pobox.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Require 1.7.1