@@ -619,6 +619,7 @@ bool lua_hooks::hook_get_fetch_sources(cert_value const & branchname,
   return ll.ok();
 }
 
+// connect addrs are for *pure tunnels*
 bool lua_hooks::hook_get_connect_addr(string const & proto,
 				      string const & host, 
 				      unsigned long port,
@@ -633,6 +634,32 @@ bool lua_hooks::hook_get_connect_addr(string const & proto,
     .push_str(host)
     .push_int(static_cast<int>(port))
     .call(3,1)
+    .begin();
+  
+  ll.next();
+  ll.extract_str(host_out);
+
+  ll.next();
+  int tmp;
+  ll.extract_int(tmp);
+  if (ll.ok()) port_out = tmp;
+  
+  return ll.ok();
+}
+
+// http proxies are a special case, alas
+bool lua_hooks::hook_get_http_proxy(string const & host, 
+				    unsigned long port,
+				    string & host_out,
+				    unsigned long & port_out)
+{
+  Lua ll(st);
+  ll
+    .push_str("get_http_proxy")
+    .get_fn()
+    .push_str(host)
+    .push_int(static_cast<int>(port))
+    .call(2,1)
     .begin();
   
   ll.next();
