@@ -50,11 +50,17 @@ public:
 			     std::set<url> & targets);
   bool hook_get_fetch_sources(cert_value const & branchname, 
 			      std::set<url> & sources);
+
   bool hook_get_connect_addr(std::string const & proto,
 			     std::string const & host, 
 			     unsigned long port,
 			     std::string & host_out,
 			     unsigned long & port_out);
+
+  bool hook_get_http_proxy(std::string const & host, 
+			   unsigned long port,
+			   std::string & host_out,
+			   unsigned long & port_out);
 
 
   // local repo hooks
