@@ -32,30 +32,22 @@ attr_functions["execute"] =
   end
 
 
-function get_connect_addr(proto, host, port)
-	if (proto == "http") then
-
-		val = os.getenv("HTTP_PROXY")
-
-		if (val == nil) then 
-			val = os.getenv("http_proxy") 
-		end
-
-		if (val == nil) then 
-			return { host, port } 
-		end
-
-		val = string.gsub(val, "http://", "")
-		b, e = string.find(val, ":")
-
-		if (b ~= nil and b > 0) then
-			chost = string.sub(val, 0, b-1)
-			cport = string.sub(val, b+1)
-			return { chost, cport }
-		end
-		return { val, port }
+function get_http_proxy(host, port)
+	val = os.getenv("HTTP_PROXY")
+	if (val == nil) then 
+		val = os.getenv("http_proxy") 
 	end
-	return nil
+	if (val == nil) then 
+		return { host, port } 
+	end
+	val = string.gsub(val, "http://", "")
+	b, e = string.find(val, ":")
+	if (b ~= nil and b > 0) then
+		chost = string.sub(val, 0, b-1)
+		cport = string.sub(val, b+1)
+		return { chost, cport }
+	end
+	return { val, port }
 end
 
 function ignore_file(name)
